fix: ridotta dimensione loghi social per evitare overflow laterale

--- a/resources/sass/partials/_footer.scss
+++ b/resources/sass/partials/_footer.scss
@@ -57,3 +57,14 @@ footer{
         }
     }
 }
+
+@media screen and(max-width: 524) {
+    .social-menu{
+        li{
+            a{
+                width: 30px;
+                height: 30px;
+            }
+        }
+    }
+}
